@@ -1,0 +1,11 @@
+#include <RE/RT/Starter.h>
+
+namespace re {
+	main_starter::main_starter(create_info const& ci) noexcept {
+		// start code
+	}
+
+	main_starter::~main_starter() noexcept {
+		// destroy code
+	}
+}
