@@ -1,0 +1,39 @@
+﻿
+Microsoft Visual Studio Solution File, Format Version 12.00
+# Visual Studio Version 16
+VisualStudioVersion = 16.0.34301.259
+MinimumVisualStudioVersion = 10.0.40219.1
+Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "RackEngine", "RackEngine", "{4A2FD7D1-4B03-4F33-A8DA-F5F696B08312}"
+EndProject
+Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "3rd-party", "3rd-party", "{35D3AEDC-9AA1-44DA-8FB9-3E5D2D4BD23B}"
+EndProject
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "RE", "RE\RE.vcxproj", "{3E85B9AA-1A7D-43D5-A103-3840B3787C25}"
+EndProject
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "REGame", "REGame\REGame.vcxproj", "{7FEC4496-99BE-46D0-AFF1-03B9BAD2269A}"
+EndProject
+Global
+	GlobalSection(SolutionConfigurationPlatforms) = preSolution
+		Dev|amd64 = Dev|amd64
+		Optimized|amd64 = Optimized|amd64
+	EndGlobalSection
+	GlobalSection(ProjectConfigurationPlatforms) = postSolution
+		{3E85B9AA-1A7D-43D5-A103-3840B3787C25}.Dev|amd64.ActiveCfg = Dev|x64
+		{3E85B9AA-1A7D-43D5-A103-3840B3787C25}.Dev|amd64.Build.0 = Dev|x64
+		{3E85B9AA-1A7D-43D5-A103-3840B3787C25}.Optimized|amd64.ActiveCfg = Optimized|x64
+		{3E85B9AA-1A7D-43D5-A103-3840B3787C25}.Optimized|amd64.Build.0 = Optimized|x64
+		{7FEC4496-99BE-46D0-AFF1-03B9BAD2269A}.Dev|amd64.ActiveCfg = Dev|x64
+		{7FEC4496-99BE-46D0-AFF1-03B9BAD2269A}.Dev|amd64.Build.0 = Dev|x64
+		{7FEC4496-99BE-46D0-AFF1-03B9BAD2269A}.Optimized|amd64.ActiveCfg = Optimized|x64
+		{7FEC4496-99BE-46D0-AFF1-03B9BAD2269A}.Optimized|amd64.Build.0 = Optimized|x64
+	EndGlobalSection
+	GlobalSection(SolutionProperties) = preSolution
+		HideSolutionNode = FALSE
+	EndGlobalSection
+	GlobalSection(NestedProjects) = preSolution
+		{3E85B9AA-1A7D-43D5-A103-3840B3787C25} = {4A2FD7D1-4B03-4F33-A8DA-F5F696B08312}
+		{7FEC4496-99BE-46D0-AFF1-03B9BAD2269A} = {4A2FD7D1-4B03-4F33-A8DA-F5F696B08312}
+	EndGlobalSection
+	GlobalSection(ExtensibilityGlobals) = postSolution
+		SolutionGuid = {DF08E50A-6A8D-42BC-BCD7-961D626D6312}
+	EndGlobalSection
+EndGlobal
